--- a/index.html
+++ b/index.html
@@ -95,7 +95,51 @@
             </div>
         </section>
         <section>
-            
+            <div class="contenaire-sect-3">
+                <div class="content-h1">
+                    <h1>Nous avons le plaisir de travailler avec</h1>
+                </div>
+                <div class="content-carousel">
+                    <ul class="carousel-items">
+                        <li class="carousel-item">
+                            <img src="images/partners/facebook-white.png" alt="logo facebook" id="facebook">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/orange-white.png" alt="logo orange" id="orange">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/deloitte-white.png" alt="logo deloitte" id="deloitte">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/ey-white-2.png" alt="logo logo ey" id="ey">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/gsma-white.png" alt="logo gsma" id="gsma">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/digitalafr-w.png" alt="logo digital africa" id="digitalafri">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/embassade-france-white.png" alt="logo embassade de france" id="france">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/ministere_sante-white.png" alt="logo ministère de santé" id="minSante">
+                        </li>
+                        <li class="carousel-item" id="texaf">
+                            <img src="images/partners/texaf-white.png" alt="logo texaf campus" id="texaf">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/twb-white.png" alt="logo twb" id="twb">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/banquemondiale.png" alt="logo banque mondiale" id="banquemondiale">
+                        </li>
+                        <li class="carousel-item">
+                            <img src="images/partners/theeconomist.png" alt="logo the economist" id="theeconomist">
+                        </li>                                             
+                    </ul>
+                </div>
+            </div>
         </section>
         <section></section>
         <section></section>
