section 4 terminé et debut section 3

--- a/index.html
+++ b/index.html
@@ -141,8 +141,203 @@
                 </div>
             </div>
         </section>
-        <section></section>
-        <section></section>
+        <section>
+            <div class="contenaire-sect-4">
+                <div class="sect-4-cont1 sect4-cont">
+                    <div class="contenaire-titre">
+                        <h1>Nous accompagnons vos projets</h1>
+                    </div>
+                </div>
+                <div class="sect-4-cont2 sect4-cont">
+                    <div class="content-realiserProjet box4">
+                        <div class="sect4-Contenu">                            
+                                <h3> > Réaliser votre projet</h3>
+                                <p>Engagez une équipe de développeurs de Kinshasa Digital à un prix
+                                    fixe pour livrer un produit final.</p>
+                                <button>DEMARRER MAINTENANT</button>                            
+                        </div>
+                    </div>
+                    <div class="content-IntegrerEquipe box4">
+                        <div class="sect4-Contenu">
+                            <h3> > Integrer votre équipe</h3>
+                            <p>Engagez un ou plusieurs développeurs de Kinshasa Digital à des
+                                prix compétitifs pour rejoindre votre équipe à distance.</p>
+                            <button>ENGAGER UN DEVELOPPEUR</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="class="contenaire-sect-3"">
+                <div class="">
+                    <div class="contenaire-titre">
+                        <h1>Ce que nous avons développé</h1>
+                    </div>
+                </div>
+                <div class="">
+                    <div class="">
+                        <button></button>
+                        <div class="">
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <img src="" alt="">
+                                </div>
+                                <div>
+                                    <p>
+
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class=""></div>
+                                    <div class=""></div>
+                                </div>
+                            </div>
+                        </div>
+                        <button></button>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
