--- a/index.html
+++ b/index.html
@@ -170,18 +170,99 @@
         </section>
         <section>
             <div class="class="contenaire-sect-3"">
-                <div class="">
+                <div class="content-h1">
                     <div class="contenaire-titre">
                         <h1>Ce que nous avons développé</h1>
                     </div>
                 </div>
-                <div class="">
+                <div class="content-carousel">
                     <div class="">
                         <button></button>
                         <div class="">
                             <div class="">
                                 <div>
-                                    <img src="" alt="">
+                                    <a href="https://www.africandigitalstory.com/"><img src="images/works/ADS.png" alt="african digital story"></a>
+                                </div>
+                                <div>
+                                    <p>
+                                        Client: African Digital Story <br>
+                                        Site: <a href="https://www.africandigitalstory.com/" target="_blank" rel="">https://www.africandigitalstory.com/</a>
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class="">
+                                         <p> <img src="images/technos/react.png" alt="logo react native"> React Native</p>
+                                    </div>                                    
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <a href="https://kinshasadigital.com/"><img src="images/works/covid-dashboard.png" alt="Stop coronavirus"></a>
+                                </div>
+                                <div>
+                                    <p>
+                                        Client: Ministère de la santé RDC 
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class="">
+                                        <p><img src="images/technos/vuejs.png" alt="logo vuejs">Vue.js</p>
+                                        <p><img src="images/technos/laravel.png" alt="logo lavarel">lavarel</p>
+                                        <p><img src="images/technos/" alt="logo Apache">Apache</p>
+                                        <p><img src="images/technos/" alt="logo Chartjs">Chart.js</p>
+                                        <p><img src="images/technos/" alt="logo php">PHP</p>
+                                        <p><img src="images/technos/" alt="logo MapBox">MapBox</p>
+                                    </div>                                    
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <a href="https://tandemadvertising.com/"><img src="images/works/tandem.png" alt="tandem"></a>
+                                </div>
+                                <div>
+                                    <p>
+                                        Client: Tandem Adversing <br>
+                                        Site: <a href="https://tandemadvertising.com/" target="_blank" rel="">https://tandemadvertising.com/</a>
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class="">
+                                        <p><img src="" alt="logo wordpress">WordPress - (Custom theme)</p>
+                                    </div>                                    
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <a href="https://www.companyleagues.be/"><img src="images/works/companyleagues.png" alt="Company League"></a>
+                                </div>
+                                <div>
+                                    <p>
+                                        Client: Company League <br>
+                                        Site: <a href="https://www.companyleagues.be/" target="_blank" rel="noopener noreferrer">https://www.companyleagues.be/</a> 
+                                    </p>
+                                    <p>
+                                        <img src="" alt="">
+                                    </p>
+                                </div>
+                                <div>
+                                    <div class="">
+                                        <p><img src="" alt="logo Elementor">Elementor</p>
+                                        <p><img src="" alt="logo WordPress">WordPress</p>
+                                    </div>                                    
+                                </div>
+                            </div>
+                            <div class="">
+                                <div>
+                                    <a href=""><img src="images/works/digitalafrica.png" alt=""></a>
                                 </div>
                                 <div>
                                     <p>
@@ -198,7 +279,7 @@
                             </div>
                             <div class="">
                                 <div>
-                                    <img src="" alt="">
+                                    <a href=""><img src="" alt=""></a>
                                 </div>
                                 <div>
                                     <p>
@@ -215,7 +296,7 @@
                             </div>
                             <div class="">
                                 <div>
-                                    <img src="" alt="">
+                                    <a href=""><img src="" alt=""></a>
                                 </div>
                                 <div>
                                     <p>
@@ -232,7 +313,7 @@
                             </div>
                             <div class="">
                                 <div>
-                                    <img src="" alt="">
+                                    <a href=""><img src="" alt=""></a>
                                 </div>
                                 <div>
                                     <p>
@@ -249,75 +330,7 @@
                             </div>
                             <div class="">
                                 <div>
-                                    <img src="" alt="">
-                                </div>
-                                <div>
-                                    <p>
-
-                                    </p>
-                                    <p>
-                                        <img src="" alt="">
-                                    </p>
-                                </div>
-                                <div>
-                                    <div class=""></div>
-                                    <div class=""></div>
-                                </div>
-                            </div>
-                            <div class="">
-                                <div>
-                                    <img src="" alt="">
-                                </div>
-                                <div>
-                                    <p>
-
-                                    </p>
-                                    <p>
-                                        <img src="" alt="">
-                                    </p>
-                                </div>
-                                <div>
-                                    <div class=""></div>
-                                    <div class=""></div>
-                                </div>
-                            </div>
-                            <div class="">
-                                <div>
-                                    <img src="" alt="">
-                                </div>
-                                <div>
-                                    <p>
-
-                                    </p>
-                                    <p>
-                                        <img src="" alt="">
-                                    </p>
-                                </div>
-                                <div>
-                                    <div class=""></div>
-                                    <div class=""></div>
-                                </div>
-                            </div>
-                            <div class="">
-                                <div>
-                                    <img src="" alt="">
-                                </div>
-                                <div>
-                                    <p>
-
-                                    </p>
-                                    <p>
-                                        <img src="" alt="">
-                                    </p>
-                                </div>
-                                <div>
-                                    <div class=""></div>
-                                    <div class=""></div>
-                                </div>
-                            </div>
-                            <div class="">
-                                <div>
-                                    <img src="" alt="">
+                                    <a href=""><img src="" alt=""></a>
                                 </div>
                                 <div>
                                     <p>
