--- a/index.html
+++ b/index.html
@@ -184,41 +184,45 @@
                                 <div class="imageWork">
                                     <a href="https://www.africandigitalstory.com/"><img src="images/works/ADS.png" alt="african digital story"></a>
                                 </div>
-                                <div>
+                                <div class="Text-s-img">
                                     <p>
                                         Client: African Digital Story <br>
                                         Site: <a href="https://www.africandigitalstory.com/" target="_blank" rel="">https://www.africandigitalstory.com/</a>
                                     </p>
                                     <p>
-                                        <img src="" alt="">
+                                        <img src="images/illustrations/congo.png" alt="Drapeau RDC">&nbsp; <span>RDC</span> 
                                     </p>
                                 </div>
-                                <div>
-                                    <div class="">
+                                <div class="footer">
+                                    <div class="footer-img">
                                          <p> <img src="images/technos/react.png" alt="logo react native"> React Native</p>
                                     </div>                                    
                                 </div>
                             </div>
-                            <div class="sous-contenu-sect-5">
+                           <div class="sous-contenu-sect-5">
                                 <div class="imageWork">
                                     <a href="https://kinshasadigital.com/"><img src="images/works/covid-dashboard.png" alt="Stop coronavirus"></a>
                                 </div>
-                                <div>
+                                <div class="Text-s-img">
                                     <p>
                                         Client: Ministère de la santé RDC 
                                     </p>
                                     <p>
-                                        <img src="" alt="">
+                                        <img src="images/illustrations/congo.png" alt="Drapeau RDC">&nbsp; <span>RDC</span> 
                                     </p>
                                 </div>
-                                <div>
-                                    <div class="">
+                                <div class="footer">
+                                    <div class="footer-img">
                                         <p><img src="images/technos/vuejs.png" alt="logo vuejs">Vue.js</p>
                                         <p><img src="images/technos/laravel.png" alt="logo lavarel">lavarel</p>
-                                        <p><img src="images/technos/" alt="logo Apache">Apache</p>
-                                        <p><img src="images/technos/" alt="logo Chartjs">Chart.js</p>
-                                        <p><img src="images/technos/" alt="logo php">PHP</p>
-                                        <p><img src="images/technos/" alt="logo MapBox">MapBox</p>
+                                        <p><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32" data-icon="cib:apache" data-inline="false" class="iconify" style="transform: rotate(360deg);"><path d="M21.099 0a1.03 1.03 0 0 0-.536.151c-.5.297-1.333 1.136-2.328 2.355l-.208.255a34.71 34.71 0 0 0-.824 1.057a54.275 54.275 0 0 0-2.687 3.959l-.027.047l-.063.099a54.229 54.229 0 0 0-2.276 4.109a33.815 33.815 0 0 0-1.468 3.407c-.12.333-.229.656-.333.969c-.084.265-.161.531-.235.796c-.177.62-.333 1.245-.459 1.865l-.016.083a19.364 19.364 0 0 0-.312 2.256l-.005.077c-.369-.599-1.369-1.181-1.369-1.177c.719 1.037 1.26 2.068 1.339 3.079c-.38.079-.907-.036-1.516-.26c.636.583 1.109.744 1.292.787c-.579.036-1.183.437-1.792.895c.891-.364 1.609-.509 2.125-.391a173.201 173.201 0 0 0-2.459 7.584a.702.702 0 0 0 .484-.473c.152-.491 1.12-3.715 2.641-7.953l.129-.365l.037-.099c.161-.443.328-.896.5-1.36l.115-.317l.005-.005c.156-.421.317-.853.484-1.287l.073-.181l.067-.183l.057-.136l-.057.141l-.067.177l-.073.181c-.167.433-.328.865-.484 1.287l.14.276l.125-.015l.016-.037c.203-.557.4-1.099.604-1.624l.005-.021a94.042 94.042 0 0 0-.609 1.645l-.016.037l-.089.244c-.156.432-.317.875-.473 1.323l-.005.021l-.068.193c-.109.301-.203.577-.411 1.197c.348.161.629.584.896 1.057a1.935 1.935 0 0 0-.62-1.317c1.729.077 3.219-.36 3.989-1.62c.068-.115.131-.235.188-.36c-.349.443-.787.631-1.605.584c1.204-.537 1.808-1.052 2.339-1.912a7.34 7.34 0 0 0 .376-.667c-1.052 1.079-2.267 1.385-3.553 1.152l-.056-.011c1.151-.141 2.681-1 3.671-2.063a9.235 9.235 0 0 0 1.251-1.74c.287-.505.552-1.063.807-1.677c.224-.541.439-1.124.641-1.755a3.562 3.562 0 0 1-1.079.344c-.063.011-.124.02-.181.031l.004-.005c.057-.005.12-.015.177-.025s.12-.021.177-.037l-.177.037l-.177.025c1.073-.411 1.745-1.208 2.235-2.181a3.805 3.805 0 0 1-1.287.567c-.077.016-.151.032-.228.043l-.057.004h.009l.048-.004c.067-.016.135-.027.208-.043l.015-.005l-.02.005l-.256.047c.371-.156.683-.333.953-.536a3.646 3.646 0 0 0 .85-.932l.084-.141l.104-.203c.181-.369.348-.749.489-1.135l.041-.115c.036-.115.073-.219.093-.308c.037-.131.057-.235.073-.312c-.041.031-.083.063-.125.083c-.328.199-.88.371-1.328.453l-.135.016l-3.021.333l-.016.031l-.104.213l-.312.652c.104-.224.208-.443.312-.652l.104-.213l.016-.031l-.115.011l-.088-.177c-.172.339-.339.677-.505 1.016l-.271.567a95.015 95.015 0 0 0-1.453 3.209c-.5 1.151-.98 2.307-1.443 3.468l.115-.287c.427-1.068.869-2.129 1.328-3.181a89.107 89.107 0 0 1 1.453-3.209l.271-.567c.161-.324.317-.647.479-.964l.027-.052c.255-.505.511-1 .771-1.489c.281-.516.563-1.027.844-1.521c.291-.5.588-1 .896-1.489l.057-.089c.296-.468.599-.927.9-1.359A22.064 22.064 0 0 1 21.183 1.7l-.079.084c-.213.235-.859.984-1.833 2.484c.937-.047 2.38-.239 3.552-.443c.355-1.959-.339-2.853-.339-2.853s-.593-.959-1.38-.969zm-2.192 10.011c.88-.407 1.271-.771 1.656-1.303c.099-.145.203-.296.301-.457c.313-.485.615-1.016.885-1.548c.267-.515.496-1.02.672-1.479a8.42 8.42 0 0 0 .272-.803c.052-.208.099-.405.129-.599c-1.177.204-2.62.396-3.557.437a39.08 39.08 0 0 0-.927 1.5c-.271.459-.563.964-.869 1.516a73.301 73.301 0 0 0-1.589 3.063l3.021-.328zm4.833-7.079v.089h.208v.583h.099v-.583h.208v-.089zm.62 0v.672h.088v-.531l.229.463h.063l.229-.463v.531h.083v-.672h-.115l-.229.469l-.235-.469zM19.016 10l-.136.021l.136-.027zm-.12.016h-.011zm-3.656 1.656l-.141.301l-.177.381c-.421.921-.833 1.848-1.228 2.781a127.196 127.196 0 0 0-1.329 3.26c-.197.505-.4 1.02-.599 1.552l-.011.021c.959-2.579 2.011-5.12 3.167-7.615l.177-.381z" fill="currentColor"></path></svg>
+                                           &nbsp; Apache</p>
+                                        <p><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="0.87em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 444 512" data-icon="file-icons:chartjs" data-inline="false" class="iconify" style="transform: rotate(360deg);"><path d="M93.773 383.301L56.185 359.84c7.174-23.248 66.002-128.702 101.15-125.735c-20.377 53.312-31.795 100.81-63.562 149.196zm73.899-125.875c-16.825 50.264-35.685 96.805-59.43 134.418l113.77 65.845L401.808 354.1v-96.054c-17.409 1.899-28.04 11.714-33.856 27.625c-8.966 24.522-45.09 53.526-74.208 14.434c-46.294 73.817-89.691 61.131-126.072-42.678zm-15.976-37.5c-29.717-63.536-86.128-64.359-110.288 30.382v99.365c16.752-30.082 69.495-126.03 110.288-129.747zm241.551 23.284c-30.182-22.633-75.278 4.926-92.666 44.772c16.273 26.845 32.626 21.312 46.433 8.314c11.115-10.464 14.987-42.382 46.233-53.086zm-131.318 1.74c-28.167-53.934-52.027-95.947-82.744-17.201c25.446 19.944 55.937 40.149 82.744 17.202zm24.196 44.355c-6.059-9.207-12.04-20.276-17.61-31.46c-26.778 21.11-60.71 10.872-94.623-16.6c20.782 53.499 37.073 83.209 53.345 91.251c18.386 9.087 43.204-11.97 58.888-43.191zM30.222 145.277v221.446L222 477.446l191.778-110.723V145.277L222 34.554L30.222 145.277zM444 128v256L222 512L0 384V128L222 0l222 128zm-42.192 96.855c-33.024-49.825-60.828-52.76-81.188-38.38c-18.528 13.084-31.146 44.257-41.24 60.66c4.485 10.063 8.71 15.672 13.613 24.951c23.655-45.014 67.622-71.407 108.815-40.748v-6.483z" fill="currentColor"></path></svg>
+                                            &nbsp; Chart.js</p>
+                                        <p><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32" data-icon="cib:php" data-inline="false" class="iconify" style="transform: rotate(360deg);"><path d="M9.349 13.609H8.088l-.687 3.531h1.12c.739 0 1.291-.14 1.656-.421c.359-.276.604-.745.729-1.396c.124-.625.067-1.068-.161-1.328c-.235-.255-.699-.385-1.396-.385zM16 7.584C7.161 7.584 0 11.355 0 16s7.161 8.416 16 8.416S32 20.645 32 16s-7.161-8.416-16-8.416zm-4.349 9.937a3.199 3.199 0 0 1-1.219.733c-.448.141-1.02.219-1.713.219H7.14l-.432 2.24H4.869l1.641-8.432h3.531c1.063 0 1.839.276 2.328.833c.485.557.636 1.339.437 2.339a3.818 3.818 0 0 1-.405 1.131a3.827 3.827 0 0 1-.751.937zm5.37.952l.724-3.733c.083-.423.052-.713-.095-.871c-.14-.151-.448-.229-.916-.229h-1.453l-.937 4.833h-1.828l1.64-8.437h1.823l-.437 2.245h1.625c1.027 0 1.729.177 2.115.531c.391.36.505.937.355 1.735l-.767 3.927zm10.124-3.02a3.683 3.683 0 0 1-.405 1.131a3.823 3.823 0 0 1-.745.937a3.282 3.282 0 0 1-1.224.733c-.448.141-1.021.219-1.713.219h-1.573l-.437 2.24h-1.839l1.641-8.432h3.531c1.063 0 1.839.276 2.328.839c.485.552.636 1.333.437 2.333zm-3.457-1.844h-1.256l-.687 3.531h1.115c.744 0 1.296-.14 1.656-.421c.364-.276.609-.745.735-1.396c.124-.625.067-1.068-.168-1.328c-.228-.255-.697-.385-1.395-.385z" fill="currentColor"></path></svg>
+                                            &nbsp;PHP</p>
+                                        <p><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" data-icon="mdi:mapbox" data-inline="false" class="iconify" style="transform: rotate(360deg);"><path d="M12 2a10 10 0 0 1 10 10a10 10 0 0 1-10 10A10 10 0 0 1 2 12A10 10 0 0 1 12 2m4.75 12.45c1.9-1.9 1.83-5.06-.16-7.04c-1.99-1.98-5.14-2.06-7.04-.16c-3.43 3.43-2.33 9.53-2.33 9.53s6.11 1.09 9.53-2.33m-3.6-6.59l.98 2.01l2.01.98l-2.01.98l-.98 2.01l-.98-2.01l-2.01-.98l2.01-.98l.98-2.01z" fill="currentColor"></path></svg>
+                                            &nbsp;MapBox</p>
                                     </div>                                    
                                 </div>
                             </div>
@@ -226,26 +230,26 @@
                                 <div class="imageWork">
                                     <a href="https://tandemadvertising.com/"><img src="images/works/tandem.png" alt="tandem"></a>
                                 </div>
-                                <div>
+                                <div class="Text-s-img">
                                     <p>
                                         Client: Tandem Adversing <br>
                                         Site: <a href="https://tandemadvertising.com/" target="_blank" rel="">https://tandemadvertising.com/</a>
                                     </p>
                                     <p>
-                                        <img src="" alt="">
+                                        <img src="images/illustrations/suise.png" alt="Drapeau RDC">&nbsp; <span>Suise</span> 
                                     </p>
                                 </div>
-                                <div>
-                                    <div class="">
-                                        <p><img src="" alt="logo wordpress">WordPress - (Custom theme)</p>
+                                <div class="footer">
+                                    <div class="footer-img">
+                                        <p><img src="images/technos/wordpress-icon.svg" alt="logo wordpress"> &nbsp; WordPress - (Custom theme)</p>
                                     </div>                                    
                                 </div>
                             </div>
-                            <div class="sous-contenu-sect-5">
+                         <!-- <div class="sous-contenu-sect-5">
                                 <div class="imageWork">
                                     <a href="https://www.companyleagues.be/"><img src="images/works/companyleagues.png" alt="Company League"></a>
                                 </div>
-                                <div>
+                                <div Text-s-img">
                                     <p>
                                         Client: Company League <br>
                                         Site: <a href="https://www.companyleagues.be/" target="_blank" rel="noopener noreferrer">https://www.companyleagues.be/</a> 
@@ -255,13 +259,13 @@
                                     </p>
                                 </div>
                                 <div>
-                                    <div class="">
+                                    <div class="footer-img">
                                         <p><img src="" alt="logo Elementor">Elementor</p>
                                         <p><img src="" alt="logo WordPress">WordPress</p>
                                     </div>                                    
                                 </div>
                             </div>
-                            <div class="sous-contenu-sect-5">
+                         <div class="sous-contenu-sect-5">
                                 <div class="imageWork">
                                     <a href="https://www.africandigitalstory.com/"><img src="images/works/digitalafrica.png" alt=""></a>
                                 </div>
@@ -368,7 +372,7 @@
                                     </div>
                                     
                                 </div>
-                            </div>
+                            </div>--> 
                         </div>
                         
                     </div>
@@ -378,7 +382,7 @@
         <section>
             <div class="contenaire-sect-6">
                 <div class="sect-6-cont1">
-                    <div class="contenaire-titre">
+                    <div class="cont-titre-6">
                         <h1>Notre expertise</h1>
                     </div>
                 </div>
@@ -390,7 +394,7 @@
                             </h3>
                         </div>
                         <div class="card-body">
-                            <div class="col1">
+                            <div class="col">
                                 <div class="">
                                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="4em" height="4em" 
                                     preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" data-icon="typcn:html5" data-inline="false" class="iconify" style="transform: rotate(360deg);"><path d="M13.1 3.5l.7 1.1l.7-1.1V5h1V2h-1l-.7 1.1l-.6-1.1h-1.1v3h1zM18.4 5V4H17V2h-1v3zM9.8 5h1V3h.9V2H8.9v1h.9zM6.6 4h.9v1h1V2h-1v1h-.9V2h-1v3h1zM5 6l1.2 14.4L12 22l5.8-1.6L19 6H5zm11.3 4.6H9.5l.2 1.8h6.4l-.5 5.5l-3.6 1l-3.6-1l-.3-2.9h1.8l.1 1.5l2 .5l2-.5l.2-2.3H8l-.5-5.3h9l-.2 1.7z" fill="currentColor">
@@ -477,7 +481,7 @@
                         <div class="card-header" id="card-header-2">
                             <h3>Soft Skills</h3>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body" id="body-2">
                             <div class="col">
                                 <div class="sous-col">
                                     <ol>
@@ -504,7 +508,42 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section>
+            <div class="sect-6-cont1">
+                <div class="cont-header-7">
+                    <div class="cont-titre">
+                        <h1>Prêt ?</h1>
+                    </div>
+                </div>
+                <div class="cont-body-7">
+                    <div class="">
+                        <div class="">
+                            <img src="images/illustrations/call.png" alt="Appel d'introduction">
+                        </div>
+                        <h4>Appel d'introduction</h4>
+                    </div>
+                    <div class="">
+                        <div class="">
+                            <img src="images/illustrations/users.png" alt="Proposition de profils">
+                        </div>
+                        <h4>Proposition de profils</h4>
+                    </div>
+                    <div class="">
+                        <div>
+                            <img src="images/illustrations/call.png" alt="Interviews vidéo">
+                        </div>
+                        <h4>Interviews vidéo</h4>
+                    </div>
+                    <div class="">
+                        <div class="">
+                            <img src="images/illustrations/user_group.png" alt="">
+                        </div>
+                    </div>
+                    <h4>Onboarding</h4>
+                </div>
+                <div class=""></div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
