Ajout page Emploi

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Kinshasa Digital</title>
+    <title>Kinshasa Digital : Agence de Développement</title>
 </head>
 <body>
     <header>
@@ -18,9 +18,9 @@
         </p>
         <nav>
             <ul>
-                <li><a  href="">Accueil</a></li>
+                <li><a  href="index.html">Accueil</a></li>
                 <li><a href="">Academy</a></li>
-                <li><a href="">Emploi</a></li>
+                <li><a href="Emploi.html">Emploi</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
@@ -755,6 +755,7 @@
             </div>
             <br>
             <br>
+            
             <div id="social">
                 
                     <div class="lienSociaux"><a href="http://" target="_blank"><img src="images/social/facebook-f-brands.svg" alt=""></a></div>
