modification après feedback dans la salle

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <li class="carousel-item">
                             <img src="images/partners/ey-white-2.png" alt="logo logo ey" id="ey">
                         </li>
-                        <li class="carousel-item">
+                      <!--  <li class="carousel-item">
                             <img src="images/partners/gsma-white.png" alt="logo gsma" id="gsma">
                         </li>
                         <li class="carousel-item">
@@ -137,7 +137,7 @@
                         </li>
                         <li class="carousel-item">
                             <img src="images/partners/theeconomist.png" alt="logo the economist" id="theeconomist">
-                        </li>                                             
+                        </li>   -->                                          
                     </ul>
                 </div>
             </div>
@@ -508,7 +508,7 @@
                     </div>
                     <div class="box-img">
                         <div class="box">
-                            <img src="images/illustrations/users.png" alt="Proposition de profils">
+                            <img id="img-users" src="images/illustrations/users.png" alt="Proposition de profils">
                         </div>
                         <h4>Proposition de profils</h4>
                     </div>
@@ -592,6 +592,7 @@
                 <div id="sect-9-titre">
                 <h1>Kinshasa Digital dans les médias</h1>
             </div>  
+            <div id="box-img-9">
                 <div id="img-sect-9">
                     <div><img src="images/medias/jeuneafr.png" alt="jeune afrique"></div>
                     <div><img src="images/medias/detijd.png" alt="detijd"></div>
