--- a/Emploi.html
+++ b/Emploi.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kinshasa Digital : Agence de Développement</title>
 </head>
