--- a/index.html
+++ b/index.html
@@ -502,10 +502,11 @@
                 <div class="cont-body-7">
                     <div class="box-img">
                         <div class="box">
-                            <img src="images/illustrations/call.png" alt="Appel d'introduction">
+                            <img src="images/illustrations/call.png" alt="Appel d'introduction">                            
                         </div>
                         <h4>Appel d'introduction</h4>
                     </div>
+                    
                     <div class="box-img">
                         <div class="box">
                             <img id="img-users" src="images/illustrations/users.png" alt="Proposition de profils">
@@ -665,6 +666,7 @@
                 <fieldset class="con-fieldset">
                     <legend>Quel titre vous décrit le mieux</legend>
                     <select name="titre" id="titre">
+                        <option value=""></option>
                         <option value="Consultant">Consultant</option>
                         <option value="Entrepreneur">Entrepreneur</option>
                         <option value="Etudiant">Etudiant</option>
@@ -682,6 +684,7 @@
                 <fieldset class="con-fieldset">
                     <legend>Secteur d'activités</legend>
                     <select name="sect-activ" id="sect-activ">
+                        <option value=""></option>
                         <option value="Agriculture et foresterie">Agriculture et foresterie</option>
                         <option value="Aeroport">Aeroport</option>
                         <option value="Construction">Construction</option>
@@ -711,6 +714,7 @@
             <fieldset>
                 <legend>Type de demande</legend>
                     <select name="type-demand" id="type-demand" aria-placeholder=" ">
+                        <option value=""></option>
                         <option value="Développement:Site internet">Développement:Site internet</option>
                         <option value="Développement:Site Application Mobile">Développement:Site Application Mobile</option>
                         <option value="Développement:Site Application de Gestion">Développement:Site Application de Gestion</option>
